<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        style="@style/TextSmallBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:letterSpacing="0.12"
        android:paddingBottom="4dp"
        android:text="@string/choose_calendar"
        android:textAllCaps="true" />

    <TextView
        style="@style/TextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingBottom="12dp"
        android:text="@string/choose_calendar_subtitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:id="@+id/calendarList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf" />
    </ScrollView>

    <TextView
        android:id="@+id/cancelButton"
        style="@style/TextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingTop="12dp"
        android:padding="12dp"
        android:text="@string/cancel" />
</LinearLayout>
